--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: true
   roles:
-    - role: common_packages
+    - role: ecgalaxy.common_packages
     - role: jmeter
   environment:
     http_proxy: "{{ lookup('env', 'http_proxy') }}"
