--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -2,6 +2,6 @@
   hosts: all
   gather_facts: yes
   tasks:
-    - name: "Include Testing roles."
+    - name: Include Testing roles
       include_role:
         name: "tests"
