--- a/molecule/default/roles/tests/tasks/main.yml
+++ b/molecule/default/roles/tests/tasks/main.yml
@@ -1,16 +1,15 @@
 ---
-
 - name: Include role defaults vars
   with_first_found:
     - "../../defaults/main.yml"
   include_vars: "{{ item }}"
 
-- name: "Stat installation dir."
+- name: Stat installation dir
   stat:
     path: "{{ jmeter_install_dir }}/{{ jmeter_name }}"
   register: directory
- 
-- name: "Assert installation dir."
+
+- name: Assert installation dir
   assert:
     that:
       - "directory.stat.exists"
@@ -19,12 +18,12 @@
       - "directory.stat.pw_name == 'root'"
       - "directory.stat.gr_name == 'root'"
 
-- name: "Stat cli bin link."
+- name: Stat cli bin link
   stat:
     path: "{{ jmeter_cli_bin }}"
   register: file
 
-- name: "Assert that cli bin link is present."
+- name: Assert that cli bin link is present
   assert:
     that:
       - "file.stat.exists"
