--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,38 +1,36 @@
 ---
-
-- name: Download JMeter.
+- name: Download JMeter
   get_url:
     dest: "{{ jmeter_download_dir }}"
     url: "{{ jmeter_download_url }}"
-    owner: root
-    group: root
-    mode: "u=rwx,go=rx"  
+    mode: "u=rwx,go=rx"
     checksum: "{{ jmeter_checksum }}"
 
-- name: Create installation dir.
+- name: Create installation dir
   file:
     path: "{{ jmeter_install_dir }}"
     state: directory
-    owner: "root"  
-    group: "root"  
-    mode: "u=rwx,go=rx"  
+    owner: "root"
+    group: "root"
+    mode: "u=rwx,go=rx"
   become: true
 
-- name: Install JMeter.
+- name: Install JMeter
   unarchive:
     src: "{{ jmeter_download_dir }}/{{ jmeter_archive_name }}"
     dest: "{{ jmeter_install_dir }}"
-    owner: "root" 
+    owner: "root"
     group: "root"
-    mode: "u=rwx,go=rx"  
+    mode: "u=rwx,go=rx"
     remote_src: yes
+  become: true
 
-- name: Create JMeter symlink.
+- name: Create JMeter symlink
   file:
     src: "{{ jmeter_install_dir }}/{{ jmeter_name }}/bin/jmeter"
     dest: "{{ jmeter_cli_bin }}"
     state: link
-    owner: "root"  
-    group: "root"  
-    mode: "u=rwx,go=rx"  
+    owner: "root"
+    group: "root"
+    mode: "u=rwx,go=rx"
   become: true
