--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -3,5 +3,5 @@
   gather_facts: yes
   tasks:
     - name: Include Testing roles
-      include_role:
+      ansible.builtin.include_role:
         name: "tests"
