--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,11 +3,11 @@
   hosts: all
   tasks:
     - name: Update apt cache
-      apt: update_cache=yes cache_valid_time=600
+      ansible.builtin.apt: update_cache=yes cache_valid_time=600
       when: ansible_os_family == 'Debian'
       changed_when: false
     - name: Update yum cache
-      yum:
+      ansible.builtin.yum:
         name: '*'
         state: latest
       when: ansible_os_family == 'RedHat'
