--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,9 +6,9 @@ galaxy_info:
   license: EUPL-1.2
   min_ansible_version: "2.5"
   platforms:
-    - name: Amazon Linux 2
+    - name: Amazon Linux
       versions:
-        - all
+        - "2"
     - name: EL
       versions:
         - "7"
@@ -20,5 +20,4 @@ galaxy_info:
         - jammy
   galaxy_tags:
     - system
-dependencies:
-  - role: ecgalaxy.common_packages
+dependencies: []
