--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,17 +1,9 @@
 ---
 - name: Prepare
   hosts: all
-  tasks:
-    - name: Update apt cache
-      ansible.builtin.apt: update_cache=yes cache_valid_time=600
-      when: ansible_os_family == 'Debian'
-      changed_when: false
-    - name: Update yum cache
-      ansible.builtin.yum:
-        name: '*'
-        state: latest
-      when: ansible_os_family == 'RedHat'
-      changed_when: false
+  roles:
+    - role: ecgalaxy.bootstrap
+    - role: ecgalaxy.common_packages
   environment:
     http_proxy: "{{ lookup('env', 'http_proxy') }}"
     https_proxy: "{{ lookup('env', 'https_proxy') }}"
