feat: Remove RHEL 7 support (breaking change, fixes #8)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,7 +22,7 @@
     owner: "root"
     group: "root"
     mode: "u=rwx,go=rx"
-    remote_src: yes
+    remote_src: true
   become: true
 
 - name: Create JMeter symlink
